header section done for mobile

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 <body>
 
-    <header class="container mx-auto pt-[60px]">
+    <header class="container mx-auto pt-[60px] px-4 md:px-0">
         <h2 class="theme-black text-[32px] font-bold mb-5">Job Application Tracker</h2>
-        <div class="grid grid-cols-3 space-x-4">
+        <div class="grid grid-cols-1 gap-4 sm:grid-cols-3">
             <div class="card card-border bg-base-100">
                 <div class="card-body">
                     <h2 class="card-title text-[14px] theme-dark">Total</h2>
