jobs section done with responsive classes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <header class="container mx-auto pt-[60px] px-4 md:px-0">
-        <h2 class="theme-black text-[32px] font-bold mb-5">Job Application Tracker</h2>
+        <h2 class="theme-black text-[26px] md:text-[36px] font-bold mb-5 ">Job Application Tracker</h2>
         <div class="grid grid-cols-1 gap-4 sm:grid-cols-3">
             <div class="card card-border bg-base-100">
                 <div class="card-body">
@@ -49,8 +49,172 @@
         </div>
     </header>
 
+    <!-- This is Jobs Section -->
+    <section class="container mx-auto px-4 md:px-0">
+        <div class="flex justify-between pb-6">
+            <h3 class="font-bold theme-black text-xl">Available Jobs</h3>
+            <p class="theme-gray text-[16px]">8 jobs</p>
+        </div>
+
+        <!-- Filter Jobs Buttons -->
+        <ul class="flex gap-2 pb-4">
+            <li><a class="btn bg-base-100 text-sm theme-gray min-w-[80px]">All</a></li>
+            <li><a class="btn bg-base-100 text-sm theme-gray min-w-[80px]">Interview</a></li>
+            <li><a class="btn bg-base-100 text-sm theme-gray min-w-[80px]">Rejected</a></li>
+        </ul>
+
+        <!-- Jobs Container here -->
+        <section class="space-y-4">
 
 
+            <div class="job p-6 bg-base-100 rounded-lg border-2 border-gray-200">
+                <h3 class="text-xl font-bold theme-black">Mobile First Corp</h3>
+                <p class="text-lg theme-gray">React Native Developer</p>
+                <p class="text-[16px] theme-gray my-5">Remote ⋅ Full-Time ⋅ $130,000 - $175,000</p>
+                <p class="badge bg-blue-100/70 p-5 text-lg theme-black font-semibold">NOT APPLIED</p>
+                <p class="text-[16px] theme-gray mt-3 mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="space-x-2 space-y-2">
+                    <button class="btn btn-outline btn-success text-lg">
+                        INTERVIEW
+                    </button>
+                    <button class="btn btn-outline btn-error text-lg">
+                        REJECTED
+                    </button>
+                </div>
+            </div>
+
+
+
+            <div class="job p-6 bg-base-100 rounded-lg border-2 border-gray-200">
+                <h3 class="text-xl font-bold theme-black">Mobile First Corp</h3>
+                <p class="text-lg theme-gray">React Native Developer</p>
+                <p class="text-[16px] theme-gray my-5">Remote ⋅ Full-Time ⋅ $130,000 - $175,000</p>
+                <p class="badge bg-blue-100/70 p-5 text-lg theme-black font-semibold">NOT APPLIED</p>
+                <p class="text-[16px] theme-gray mt-3 mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="space-x-2 space-y-2">
+                    <button class="btn btn-outline btn-success text-lg">
+                        INTERVIEW
+                    </button>
+                    <button class="btn btn-outline btn-error text-lg">
+                        REJECTED
+                    </button>
+                </div>
+            </div>
+
+
+
+
+            <div class="job p-6 bg-base-100 rounded-lg border-2 border-gray-200">
+                <h3 class="text-xl font-bold theme-black">Mobile First Corp</h3>
+                <p class="text-lg theme-gray">React Native Developer</p>
+                <p class="text-[16px] theme-gray my-5">Remote ⋅ Full-Time ⋅ $130,000 - $175,000</p>
+                <p class="badge bg-blue-100/70 p-5 text-lg theme-black font-semibold">NOT APPLIED</p>
+                <p class="text-[16px] theme-gray mt-3 mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="space-x-2 space-y-2">
+                    <button class="btn btn-outline btn-success text-lg">
+                        INTERVIEW
+                    </button>
+                    <button class="btn btn-outline btn-error text-lg">
+                        REJECTED
+                    </button>
+                </div>
+            </div>
+
+
+
+
+            <div class="job p-6 bg-base-100 rounded-lg border-2 border-gray-200">
+                <h3 class="text-xl font-bold theme-black">Mobile First Corp</h3>
+                <p class="text-lg theme-gray">React Native Developer</p>
+                <p class="text-[16px] theme-gray my-5">Remote ⋅ Full-Time ⋅ $130,000 - $175,000</p>
+                <p class="badge bg-blue-100/70 p-5 text-lg theme-black font-semibold">NOT APPLIED</p>
+                <p class="text-[16px] theme-gray mt-3 mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="space-x-2 space-y-2">
+                    <button class="btn btn-outline btn-success text-lg">
+                        INTERVIEW
+                    </button>
+                    <button class="btn btn-outline btn-error text-lg">
+                        REJECTED
+                    </button>
+                </div>
+            </div>
+
+
+
+
+            <div class="job p-6 bg-base-100 rounded-lg border-2 border-gray-200">
+                <h3 class="text-xl font-bold theme-black">Mobile First Corp</h3>
+                <p class="text-lg theme-gray">React Native Developer</p>
+                <p class="text-[16px] theme-gray my-5">Remote ⋅ Full-Time ⋅ $130,000 - $175,000</p>
+                <p class="badge bg-blue-100/70 p-5 text-lg theme-black font-semibold">NOT APPLIED</p>
+                <p class="text-[16px] theme-gray mt-3 mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="space-x-2 space-y-2">
+                    <button class="btn btn-outline btn-success text-lg">
+                        INTERVIEW
+                    </button>
+                    <button class="btn btn-outline btn-error text-lg">
+                        REJECTED
+                    </button>
+                </div>
+            </div>
+
+
+
+            <div class="job p-6 bg-base-100 rounded-lg border-2 border-gray-200">
+                <h3 class="text-xl font-bold theme-black">Mobile First Corp</h3>
+                <p class="text-lg theme-gray">React Native Developer</p>
+                <p class="text-[16px] theme-gray my-5">Remote ⋅ Full-Time ⋅ $130,000 - $175,000</p>
+                <p class="badge bg-blue-100/70 p-5 text-lg theme-black font-semibold">NOT APPLIED</p>
+                <p class="text-[16px] theme-gray mt-3 mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="space-x-2 space-y-2">
+                    <button class="btn btn-outline btn-success text-lg">
+                        INTERVIEW
+                    </button>
+                    <button class="btn btn-outline btn-error text-lg">
+                        REJECTED
+                    </button>
+                </div>
+            </div>
+
+
+
+            <div class="job p-6 bg-base-100 rounded-lg border-2 border-gray-200">
+                <h3 class="text-xl font-bold theme-black">Mobile First Corp</h3>
+                <p class="text-lg theme-gray">React Native Developer</p>
+                <p class="text-[16px] theme-gray my-5">Remote ⋅ Full-Time ⋅ $130,000 - $175,000</p>
+                <p class="badge bg-blue-100/70 p-5 text-lg theme-black font-semibold">NOT APPLIED</p>
+                <p class="text-[16px] theme-gray mt-3 mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="space-x-2 space-y-2">
+                    <button class="btn btn-outline btn-success text-lg">
+                        INTERVIEW
+                    </button>
+                    <button class="btn btn-outline btn-error text-lg">
+                        REJECTED
+                    </button>
+                </div>
+            </div>
+
+
+
+            <div class="job p-6 bg-base-100 rounded-lg border-2 border-gray-200">
+                <h3 class="text-xl font-bold theme-black">Mobile First Corp</h3>
+                <p class="text-lg theme-gray">React Native Developer</p>
+                <p class="text-[16px] theme-gray my-5">Remote ⋅ Full-Time ⋅ $130,000 - $175,000</p>
+                <p class="badge bg-blue-100/70 p-5 text-lg theme-black font-semibold">NOT APPLIED</p>
+                <p class="text-[16px] theme-gray mt-3 mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="space-x-2 space-y-2">
+                    <button class="btn btn-outline btn-success text-lg">
+                        INTERVIEW
+                    </button>
+                    <button class="btn btn-outline btn-error text-lg">
+                        REJECTED
+                    </button>
+                </div>
+            </div>
+        
+        </section>
+
+    </section>
 
 
 </body>
